--- a/twitter-front/twitter/src/app/account/create-user/create-user.component.html
+++ b/twitter-front/twitter/src/app/account/create-user/create-user.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <header>
     <div class="logo">
-      <img src="/assets/twitter-113.png" alt="Twitter">
+      <img src="/assets/twitter-113.png" alt="Twitter" routerLink="">
     </div>
   </header>
   <main>
