--- a/twitter-front/twitter/src/app/components/feed/feed.component.html
+++ b/twitter-front/twitter/src/app/components/feed/feed.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <header>
     <div class="logo">
-      <img src="/assets/twitter-113.png" alt="Twitter">
+      <img src="/assets/twitter-113.png" alt="Twitter" routerLink="">
     </div>
     <div class="search-bar">
       <input type="text" placeholder="Pesquisar no Twitter">
