--- a/twitter-front/twitter/src/app/components/feed/feed.component.html
+++ b/twitter-front/twitter/src/app/components/feed/feed.component.html
@@ -1,20 +1,25 @@
 <div class="container">
   <header>
     <div class="logo">
-      <img src="/assets/twitter-113.png" alt="Twitter" routerLink="">
+      <img src="/assets/twitter-113.png" alt="Twitter" routerLink="" />
     </div>
     <div class="search-bar">
-      <input type="text" placeholder="Pesquisar no Twitter">
+      <input type="text" placeholder="Pesquisar no Twitter" />
     </div>
   </header>
   <main>
-    <div class="timeline">
-      </div>
     <div class="new-tweet">
       <form>
         <textarea placeholder="O que está acontecendo?"></textarea>
         <button type="submit">Tweetar</button>
       </form>
+    </div>
+    <h2 style="margin-left: 1.5rem">Últimos Tweets</h2>
+    <div class="timeline" *ngFor="let item of any.feedItens">
+      <ul id="tweet-list">
+        <h2>{{ item.username }}</h2>
+        <p>{{ item.content }}</p>
+      </ul>
     </div>
   </main>
 </div>
